--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,10 @@
 	padding: 0;
 	font-size: 20px;
 	font-family: 'LCD', sans-serif;
+}
 
+.screen p.result {
+	font-size: 40px;
 }
 /* Row */
 .row {
